# sar_sea_ice_classification

./: README.md  pyproject.toml
configs/: README.md  S1_multibackbone_multimodal.yaml
data examples/: S1A_EW_GRDM_1SDH_20250401T202047_20250401T202147_058568_073F92_D2CC.SAFE#1_1_mask.tif
data_preparation/: get_means_and_stds.py  get_means_and_stds_doppler.py  get_pseudoppler_data.py  npz_convert_to_tif.py  png_convert_to_tif.py  splitting_data_for_training.py
experiments/repeated_crops/: README.md  S1_multibackbone_multimodal_repeated.yaml  repeated_datamodule.py  repeated_dataset.py
experiments/repeated_crops/notebooks/: S1_multimodal_repeated_crop.ipynb
notebooks/: S1_multibackbone_multimodal.ipynb
thor_extension/: __init__.py
